--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="FunckyCode - AI-powered Website Generator">
     <meta property="og:description" content="FunckyCode uses advanced AI to help you build websites easily. Input your ideas and get a professional website in minutes.">
-    <meta property="og:url" content="https://funckycode.onrender.com/">
+    <meta property="og:url" content="https://funcky-code.vercel.app/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FunckyCode - AI-powered Website Generator">
     <meta name="twitter:description" content="Create websites with the help of AI. FunckyCode offers seamless website generation without coding!">
-    <link rel="canonical" href="https://funckycode.onrender.com/">
+    <link rel="canonical" href="https://funcky-code.vercel.app/">
     <title>FunckyCode | AI Website Generator - Create Websites Effortlessly</title>
     <script type="application/ld+json">
       {
